--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "jade": "~1.11.0",
     "vivagraphjs": "^0.10.0"
   },
   "devDependencies": {
